# AIMAX-AI-Staff-Management

./: .env.example  .gitignore  AGENTS.md  AIMAX.command  AIMAX.spec  AIMAX_ARCHITECTURE_ANALYSIS_20260523.md  AIMAX_Technical_Business_Synthesis_Report.md  AIMAX_Ultimate_Reliability_Masterplan.md  NaverBlogAuto.command  NaverBlogAuto.spec  README.md  _test_full_write.py  aimax_compliance.py  app.py  app_engage_write.py  build.py  build_nuitka.py  config.py  config.yaml  constants.py  main.py  paths.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  사용자_안내서.txt  업데이트_내역.txt  윈도우_AI개발자_특정블로거링크_기능추가_가이드.md  처음_읽어주세요.txt  패밀리데이 행사 준비.txt
auth/: naver_login.py
browser/: human_actions.py  session_manager.py  stealth_driver.py
bulk/: excel_loader.py  excel_runner.py
claudedocs/: AIMAX_Architecture_Analysis_Report.md  error-pipeline-analysis-20260702.md  error-reports-triage-20260707.md  max-app-monetization-research-spec-20260716.md  maxalert-partner-tauri-transition-notice-20260718.html  maxalert-windows-tauri-round-20260718.html  maxalert-windows-tauri-round-20260718.md  night-round-20260715-popbill-maxalert.html  night-round-20260715-popbill-maxalert.md  p1-followup-spec-20260703.md  phase1-hang-analysis-user-impact-20260610.md  tax-employee-implementation-spec-20260710.md  tax-employee-popbill-integration-2026-07-10.md  yeri-naver-blog-research-integration-2026-07-10.md  yeri-style-learning-implementation-spec-20260710.md  배포방식_충돌진단_20260603.md  정리_판정표_20260604.md
content/: ai_text.py  gemini_image.py  gemini_text.py  markdown_parser.py  openai_image.py  (+5 more)
(+790 files in other folders)
